# Rust

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
.github/workflows/: deploy-frontend-pages.yml
01_local_db/: docker-compose.postgres.yml  start-db.ps1  stop-db.ps1
02_api_test/: auth_flow.http
docs/: app.js  index.html  style.css
extras_for_team/02_auth_api_test/: auth_flow.ps1
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
integration_from_5_repos/: README.md
integration_from_5_repos/docs/: adoption_backlog.md  repo_goal_mapping.md
integration_from_5_repos/rest_client/: core_flow.http
integration_from_5_repos/scripts/: sync_vendor_repos.ps1
migrations/: 20260411195800_create_users.sql  20260429110000_week5_7_core_modules.sql  20260518090000_harden_tasks_members_logs.sql  20260518150000_add_college_to_users.sql  20260519090000_productization_fields.sql  20260519110000_admin_user_management.sql
src/: main.rs  openapi.rs  state.rs
src/config/: mod.rs
src/dto/: activity.rs  admin.rs  auth.rs  common.rs  device.rs  mod.rs  operation_log.rs  stats.rs  task.rs  user.rs  venue.rs
src/errors/: mod.rs
src/handlers/: activity_handler.rs  admin_handler.rs  auth_handler.rs  device_handler.rs  docs_handler.rs  health_handler.rs  mod.rs  operation_log_handler.rs  stats_handler.rs  task_handler.rs  user_handler.rs  venue_handler.rs
src/middleware/: auth_extractor.rs
src/models/: activity.rs  device.rs  mod.rs  operation_log.rs  (+3 more)
(+75 files in other folders)
